[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "p2p-voice-chat"
version = "0.1.0"
description = "A P2P voice chat application using PySide6 and Opus."
authors = [{ name = "Jules", email = "jules@example.com" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PySide6",
    "PySide6-Fluent-Widgets",
    "pyaudio",
    "opuslib",
]

[project.urls]
"Homepage" = "https://github.com/example/p2p-voice-chat"
